--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "dom"
     ]
   },
+  "noImplicitAny": false,
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
